// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-319xho,
[data-css-319xho] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-319xho > div,
[data-css-319xho] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #fff;
  animation-fill-mode: both;
  border: 1px solid #fff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-319xho > div:nth-of-type(1),
[data-css-319xho] > div:nth-of-type(1) {
  top: 50px;
}

.css-319xho > div:nth-of-type(2),
[data-css-319xho] > div:nth-of-type(2) {
  left: 25px;
}

.css-319xho > div:nth-of-type(3),
[data-css-319xho] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<BallTrianglePath
  loading={true}
>
  <div
    data-css-319xho=""
  >
    <div />
    <div />
    <div />
  </div>
</BallTrianglePath>
`;

exports[`enzyme.render 1`] = `
.css-319xho,
[data-css-319xho] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-319xho > div,
[data-css-319xho] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #fff;
  animation-fill-mode: both;
  border: 1px solid #fff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-319xho > div:nth-of-type(1),
[data-css-319xho] > div:nth-of-type(1) {
  top: 50px;
}

.css-319xho > div:nth-of-type(2),
[data-css-319xho] > div:nth-of-type(2) {
  left: 25px;
}

.css-319xho > div:nth-of-type(3),
[data-css-319xho] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<div
  data-css-319xho=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-319xho,
[data-css-319xho] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-319xho > div,
[data-css-319xho] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #fff;
  animation-fill-mode: both;
  border: 1px solid #fff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-319xho > div:nth-of-type(1),
[data-css-319xho] > div:nth-of-type(1) {
  top: 50px;
}

.css-319xho > div:nth-of-type(2),
[data-css-319xho] > div:nth-of-type(2) {
  left: 25px;
}

.css-319xho > div:nth-of-type(3),
[data-css-319xho] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<div
  data-css-319xho=""
>
  <div />
  <div />
  <div />
</div>
`;
